force-app/main/default/objects/Invoice_Line_Item__c/fields/Date_Worked__c.field-meta.xml
<CustomField>
    <fullName>Date_Worked__c</fullName>
    <description>Date when the work was performed</description>
    <label>Date Worked</label>
    <type>Date</type>
</CustomField>