force-app/main/default/objects/Invoice_Line_Item__c/fields/Per_Diem_Hours__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Hours__c</fullName>
    <description>Per diem hours for this line item - calculated from timesheet data for per diem summary display</description>
    <label>Per Diem Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>