force-app/main/default/objects/Invoice_Line_Item__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the timesheet that generated this invoice line item</description>
    <label>Timesheet</label>
    <referenceTo>ASYMBL_Time__Timesheet__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>